<resources>
    <string name="app_name">Stuffix</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_nav_title_travels">Travels</string>
    <string name="home_nav_title_items">Items</string>
    <string name="home_nav_title_locations">Locations</string>
    <string name="root_nav_title_home">Home Screen</string>
    <string name="root_nav_title_add_item">Add item fragment</string>
    <string name="text_create_an_account">Create an account</string>
    <string name="auth_nav_title_sign_up">Sign Up</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_submit">Submit</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_register">Register</string>
    <string name="text_email_invalid_hint">Please, specify a valid email</string>
    <string name="text_password_invalid_hint">Your password must contain minimum 8 characters, uppercase and lowercase letters, numbers and special characters</string>
    <string name="auth_nav_title_sign_in">Sign In</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_settings">Settings</string>
    <string name="add_item_fab_content_description">Add item</string>
    <string name="add_location_fab_content_description">Add location</string>
    <string name="text_already_have_an_account">Already have an account?</string>
    <string name="text_login">Login</string>
    <string name="menu_item_delete">delete item</string>
</resources>
