<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/navigation_travels">

    <fragment
        android:id="@+id/navigation_travels"
        android:name="com.doberman.it.stuffix.ui.homeScreen.travelsList.TravelsListFragment"
        android:label="@string/home_nav_title_travels"
        tools:layout="@layout/fragment_travels_list" />
    <fragment
        android:id="@+id/navigation_items"
        android:name="com.doberman.it.stuffix.ui.homeScreen.itemsList.ItemsListFragment"
        android:label="@string/home_nav_title_items"
        tools:layout="@layout/fragment_items_list">
        <action
            android:id="@+id/action_navigation_items_to_addItemFragment"
            app:destination="@id/addItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.doberman.it.stuffix.ui.homeScreen.locationsList.LocationsListFragment"
        android:label="@string/home_nav_title_locations"
        tools:layout="@layout/fragment_locations_list"/>
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.doberman.it.stuffix.ui.add.item.AddItemFragment"
        android:label="add_item_fragment"
        tools:layout="@layout/add_item_fragment" />
</navigation>