<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<!--        <import-->
<!--            alias="viewUtil"-->
<!--            type="com.doberman.it.stuffix.ui.auth.signIn.SignUnViewUtil" />-->

        <variable
            name="viewModel"
            type="com.doberman.it.stuffix.ui.auth.signUp.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.signUp.SignUpFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/text_create_an_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/text_already_have_an_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button_register"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_button_register"
            app:layout_constraintStart_toStartOf="@+id/sign_in_button_register" />

        <Button
            android:id="@+id/sign_in_button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/text_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{ _ -> viewModel.handleNavigateToSignIn() }"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>